releases/adm/kube-web-view/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-web-view
  namespace: adm
  labels:
    application: kube-web-view
spec:
  selector:
    application: kube-web-view
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
